# dsemi

./: .gitignore  CMakeLists.txt  Dsemi.sln  LICENSE.md  README.md  compile_flags.txt
DevApp/: CMakeLists.txt  DevApp.vcxproj  DevApp.vcxproj.filters
DevApp/models/: human.mtl
DevApp/shaders/: PixelShader.cso  VertexShader.cso  basic_ps_2d.cso  basic_vs_2d.cso  default_ps.cso  default_vs.cso  rect2d_ps.cso  rect2d_vs.cso
DevApp/src/: app.cpp  app.h  devlayer.h  main.cpp
DevApp/src/ecs/: polygon2d.cpp  polygon2d.h  test2dcomponents.h
DevApp/src/layers/: testlayer2d.cpp  testlayer2d.h  testlayercore.cpp  testlayercore.h  testlayergfx.cpp  testlayergfx.h
DevApp/src/render/render2d/: render2d.h
DevApp/src/scenes/: testscene2d.cpp  testscene2d.h
DevApp/src/testLayers/: coretestlayer.cpp
DevApp/textures/: no_texture.dds
Dsemi/: CMakeLists.txt  Dsemi.vcxproj  Dsemi.vcxproj.filters
Dsemi/dsemi/: Dsemi.h  dspch.cpp
Dsemi/dsemi/core/: Application.cpp  Application.h  Input.cpp  Input.h  Window.cpp  dsemiwindows.h  layer.cpp  layer.h  layerstack.cpp  renderer.cpp  window.h
Dsemi/dsemi/core/exceptions/: dsemiexception.cpp  dsemiexception.h  hresultexception.cpp  hresultexception.h
Dsemi/dsemi/core/win32impl/: input_win32.cpp  window_win32.cpp
Dsemi/dsemi/ecs/: component.cpp  component.h  componentarray.cpp  componentarray.h  componentflag.cpp  componentflag.h  ecsdefines.h  entityarray.cpp  entityarray.h  world.cpp
Dsemi/dsemi/events/: applicationevent.h  event.h  keyboardevent.h  mouseevent.h
Dsemi/dsemi/fonts/: opentype.cpp  opentype.h  opentype_tables.h
Dsemi/dsemi/graphics/: RenderTargetView.h  api_include.h  bindable.h  camera.cpp  camera.h  color.h  device.cpp  device.h  framebuffer.h  graphics.cpp  graphics.h  render2d.h  render_context.cpp  render_context.h  render_target.cpp  render_target.h  renderer.h  rendertarget.cpp  rendertarget.h  renderwindow.h  resource.h  surface.h  swapchain.cpp  swapchain.h  util.h  vertex.h  viewport.cpp  viewport.h
Dsemi/dsemi/graphics/directx/: directx11.h  dxinclude.h  rendertarget_dx11.cpp  rendertargetview_dx11.cpp  swapchain_dx11.cpp  viewport_dx11.cpp
Dsemi/dsemi/graphics/resources/: constantbuffer.cpp  constantbuffer.h  fragment_shader.cpp  fragment_shader.h  fragmentshader.cpp  fragmentshader.h  index_buffer.h  input_layout.h  resource.h  resource_include.h  shader.h  texture2d.h  vertex_buffer.cpp  vertex_buffer.h  vertex_shader.cpp  vertex_shader.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexlayout.cpp  vertexlayout.h  vertexshader.cpp  vertexshader.h
Dsemi/dsemi/math/: Vector2.h  quaternion.cpp  quaternion.h  random.cpp  random.h  rect.cpp  rect.h  vector2.cpp  vector3.cpp  vector3f.h
Dsemi/dsemi/math/Vector/: Vector2d.cpp  Vector2d.h  Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h
Dsemi/dsemi/memory/: bitset.cpp  bitset.h
Dsemi/dsemi/platform/: handle.h  platforminclude.h
Dsemi/dsemi/platform/win32impl/: directx.h  dsemi_win32.cpp  dsemi_win32.h
Dsemi/dsemi/scene/: scene.cpp  scene.h
Dsemi/dsemi/ui/: element.cpp  element.h  frame.cpp
Dsemi/dsemi/util/: assert.h  binaryreader.cpp  binaryreader.h  logger.cpp  logger.h  string.cpp  timer.cpp  timer.h
Dsemi/include/: dspch.h
Dsemi/include/dsemi/core/: Application.h  Input.h  layer.h  layerstack.h  scene.h  window.h
Dsemi/include/dsemi/ecs/: component.h  component_array.h  component_flag.h  componentarray.h  componentflag.h  ecs.h  ecs_defines.h  entity_array.h  entityarray.h  world.h  world_query.h
Dsemi/include/dsemi/events/: event.h  keyboardevent.h  mouseevent.h
Dsemi/include/dsemi/fonts/: opentype.h  opentype_tables.h
Dsemi/include/dsemi/graphics/: api_include.h  bindable.h  color.h  colour.h  device.h  graphics.h  immediate2d.h  pipeline.h  render_context.h  render_target.h  swap_chain.h  viewport.h
Dsemi/include/dsemi/math/: Vector2.h  matrix4x4.h  point.h  quaternion.h  random.h  rect.h
Dsemi/include/dsemi/memory/: bitset.h
Dsemi/include/dsemi/scene/: scene.h
Dsemi/include/dsemi/ui/: element.h  frame.h
Dsemi/include/dsemi/util/: binaryreader.h  logger.hpp  string.h  timer.h
Dsemi/src/: Dsemi.h  dspch.cpp
Dsemi/src/core/: layerstack.cpp  layerstack.h
Dsemi/src/core/exceptions/: dsemiexception.cpp
Dsemi/src/dsemi/Core/: Application.cpp  Input.cpp  Window.cpp  layer.cpp  layerstack.cpp  window_win32_impl.cpp
Dsemi/src/dsemi/Memory/: bitset.cpp
Dsemi/src/dsemi/core/: scene.cpp
Dsemi/src/dsemi/ecs/: component.cpp  component_array.cpp  component_flag.cpp  componentflag.cpp  entity_array.cpp  entityarray.cpp  world.cpp
Dsemi/src/dsemi/fonts/: opentype.cpp
Dsemi/src/dsemi/graphics/: colour.cpp  device.cpp  graphics.cpp  pipeline.cpp  render_context.cpp  render_target.cpp  swap_chain.cpp  viewport.cpp
Dsemi/src/dsemi/math/: vector3.cpp
Dsemi/src/dsemi/scene/: scene.cpp
Dsemi/src/dsemi/ui/: element.cpp  frame.cpp
Dsemi/src/dsemi/util/: logger.cpp  string.cpp
Dsemi/src/ecs/: component.cpp
Dsemi/src/graphics/: graphics.h  renderer.h  util.h
Dsemi/src/graphics/directx/: directx11.h
Dsemi/src/math/: quaternion.cpp  vector3f.h
Dsemi/src/util/: assert.h  timer.cpp
(+87 files in other folders)
