cmake_minimum_required(VERSION 3.22.1)

project(dsemi)

set(CMAKE_BUILD_TYPE Debug)
set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "root path")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(dsemi)
add_subdirectory(devapp)
add_compile_definitions(_DEBUG UNICODE _UNICODE)
